# cmake-libpalindrome

./: .gitignore  README  cpanfile
.github/workflows/: linux.yml
libpalindrome/: CMakeLists.txt  palindrome.c
maint/: ci-install-cmake3  cmake-exec
palx/: CMakeLists.txt
t/: is_palindrome.t  palx.t
